# Snapshot

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/floatWind/snap/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/floatWind/snap/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/floatWind/snap/: ExampleUnitTest.java
buildSrc/: build.gradle.kts
buildSrc/src/main/java/com.dayan.buildsrc/: Dependencies.kt
buildSrc/src/main/java/com.example/asm/: TimeCostMethodVisitor.java
buildSrc/src/main/java/com.example/plugin/: TimeCostPlugin.java
gradle/wrapper/: gradle-wrapper.properties
videosnap/: build.gradle
videosnap/src/main/: AndroidManifest.xml
videosnap/src/main/cpp/: CMakeLists.txt  SnapUtil.cpp  SnapUtil.h  ffmpeg_log.h  jni_common.cpp  jni_common.h
videosnap/src/main/cpp/yuv/: CMakeLists.txt
videosnap/src/main/java/com/ffmpeg/: VideoSnap.java
